--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>24.0.2</version>
+        </dependency>
     </dependencies>
-
 </project>
